GNOME Bugzilla – Bug 756447
Not respecting text scaling factor under wayland
Last modified: 2015-11-15 15:57:59 UTC
I use window_scale=2 and text_scale=0.8 to get a hidpi mode with "enough" screen real estate. This works fine on X11, but in a wayland session the shell does not respect the text_scale (although gtk apps do).
Created attachment 313134 [details] [review] Fix text-scaling-factor under wayland. The text-scaling-factor GSetting was not being properly propagated to clutter and the Pango font map; under X this is done by Clutter, which listens to XSETTINGS directly.
Review of attachment 313134 [details] [review]: seems correct
Any chance we can get this into gnome-3-18 (and thus into Fedora 23).
Pushed to gnome-3-18 and master Attachment 313134 [details] pushed as e65d90d - Fix text-scaling-factor under wayland.
*** Bug 728291 has been marked as a duplicate of this bug. ***